Source/WebCore/html/RadioNodeList.h
@@ -36,9 +36,9 @@ namespace WebCore {
 
 class RadioNodeList : public DynamicSubtreeNodeList {
 public:
-    static PassRefPtr<RadioNodeList> create(const AtomicString& name, Element* formElement)
+    static PassRefPtr<RadioNodeList> create(const AtomicString& name, Element* baseElement)
     {
-        return adoptRef(new RadioNodeList(name, formElement));
+        return adoptRef(new RadioNodeList(name, baseElement));
     }
 
     ~RadioNodeList();
@@ -54,7 +54,7 @@ private:
     bool checkElementMatchesRadioNodeListFilter(Element*) const;
 
     AtomicString m_name;
-    RefPtr<Element> m_formElement;
+    RefPtr<Element> m_baseElement;
 };
 
 } // namepsace
